Version 1.1.0
-----------------------------------------------------------
16 April 2007
+ Added FORCE_EDITOR define

12 April 2007
+ Added local template caching define to config template 
+ updated files: templates/config.tpl
+ Branch now creates cache directory.

4 April 2007
+ Changed to new language format.

2 April 2007
+ removed image settings from default config template

19 March 2007
+ Removed follow sym links from htaccess file.

Version 1.0.5
--------------------------------------------------------
7 March 2007
+ Branch now copies htaccess file to branch site.

6 March 2007
+ Trying different method of getting branch dsn.

5 March 2007
+ Changed control panel icon

Version 1.0.4
---------------------------------------------------------
19 February 2007
+ Reduced translate functions

15 February 2007
+ Updated locale files.
+ Added translate functions.

13 February 2007
+ Removed language setting from default config.php template
+ Raised core dependency

8 December 2006
+ Added missing cache_directory value for config.tpl.

Version 1.0.3
----------------------------------------------------------
16 November 2006
+ Fixed bug #1590935 - Copy admin directory to branch.
+ Changed the config file to not create a table prefix line if no
  prefix exists.
+ Fixed bug that copying corrupt prefix data to the branch object.
+ Updated files : templates/config.tpl
+ Added captcha information to branch config template and removed
  file types include.


Version 1.0.2
----------------------------------------------------------
13 November 2006
+ Updated files : templates/config.tpl
+ Added captcha information to branch config template and removed
  file types include.

8 November 2006
+ Fixed bug #1590935 - Copy admin directory to branch.
+ Changed the config file to not create a table prefix line if no
  prefix exists.
+ Fixed bug that copying corrupt prefix data to the branch object.


Version 1.0.1
----------------------------------------------------------